[package]
name = "cpkit"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Process execution
which = "6.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
rfd = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
